@@ -1,3 +1,7 @@
+2004-xx-xx v?.??:
+  * Don't store fileid codes in the cache file, instead calculate them when needed. (Can halve size of gzipped cache files.)
+  * Change fileid calculation for single-part posts to include the message-id, fixes problem with multiple posts with the same subject/author not downloading when using -K.
+
 2003-12-27 v0.26:
   * Add simplest possible example to manpage.
   * Don't use __attribute__ on non-GNU compilers.
